--- a/BMW Presentation Aug 2018.ipynb
+++ b/BMW Presentation Aug 2018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -53,10 +55,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fae4c809b70>"
+       "<IPython.lib.display.IFrame at 0x7f87c05966a0>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +176,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Latest Project: Real Estate App"
+    "***\n",
+    "\n",
+    "<h1 style=\"text-align: center\">Latest Project: Real Estate App</h1>\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hawaii and Greenville County Real Estate Markets"
    ]
   },
   {
@@ -203,7 +216,7 @@
     "1. cross validation\n",
     "2. min max scaling & SVC with kernels\n",
     "3. Django app for service delivery\n",
-    "4. Test predictions at start of 2019"
+    "4. Test predictions Q1 of 2019"
    ]
   },
   {
@@ -256,7 +269,7 @@
    "metadata": {},
    "source": [
     "* deep learning image processing: NVIDIA Cert, TensorFlow, Yandex Courses\n",
-    "* economic analysis: investment modeling (think weather modeling) and Wharton Courses\n",
+    "* economic analysis and investment modeling: Wharton Courses\n",
     "* meta learners"
    ]
   },
@@ -271,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Cars as a distributed sensor network for data services and products\n",
+    "* Cars and Drones as a distributed sensor network for data services and products\n",
     "* Automation of dynamical systems: U Penn Courses\n",
     "* Web GIS mapping and data services\n",
     "* Blockchain transaction systems for location-enabled services: Eth and EOS\n",
